--- a/config/training/hyperparams/hyperparam_config.json
+++ b/config/training/hyperparams/hyperparam_config.json
@@ -30,8 +30,8 @@
     },
     "mlp": {
         "n_trials": 500,
-        "epochs_fragment": 0.2,
-        "epoch_sizing": 0.005,
+        "epochs_fragment": 0.4,
+        "epoch_sizing": 0.001,
         "architecture_parameters": {
             "hidden_dim": {
                 "type": "int",
@@ -112,6 +112,65 @@
                 "range": [
                     1e-7,
                     1e-3
+                ]
+            },
+            "batch_size": {
+                "type": "int",
+                "range": [
+                    128,
+                    1024
+                ]
+            },
+            "weight_decay": {
+                "type": "float",
+                "range": [
+                    1e-7,
+                    1e-5
+                ]
+            }
+        }
+    },
+    "cnn": {
+        "n_trials": 500,
+        "epochs_fragment": 0.2,
+        "epoch_sizing": 0.005,
+        "architecture_parameters": {
+            "num_filters": {
+                "type": "categorical",
+                "range": [
+                    16,
+                    32,
+                    64
+                ]
+            },
+            "kernel_size": {
+                "type": "int",
+                "range": [
+                    2,
+                    5
+                ]
+            },
+            "dropout": {
+                "type": "float",
+                "range": [
+                    0.1,
+                    0.5
+                ]
+            },
+            "num_conv_layers": {
+                "type": "int",
+                "range": [
+                    1,
+                    3
+                ]
+            }
+        },
+        "training_parameters": {
+            "learning_rate": {
+                "type": "float",
+                "range": [
+                    1e-7,
+                    1e-4
                 ]
             },
             "batch_size": {
