--- a/config/training/RBD_mlp_classification_head_config_weighted.json
+++ b/config/training/RBD_mlp_classification_head_config_weighted.json
@@ -6,7 +6,6 @@
     "hidden_dim": 128,
     "hidden_layers": 2,
     "task": "classification",
-    "hidden_activation": "relu",
     "hidden_dropout": 0.25
   },
   "training_parameters":
@@ -14,7 +13,7 @@
     "learning_rate": 0.00005,
     "epochs": 200,
     "batch_size": 512,
-    "loss_f": "masked_bce_logits",
+    "loss_f": "bce_logits",
     "optimizer": "adam",
     "val_split": 0.2,
     "weight_decay": 0.01,
@@ -24,8 +23,6 @@
     "scaler": false,
     "gradient_accumulation": false,
     "epoch_sizing": 1000000,
-    "early_stopping": 10,
-    "weights": "weights",
-    "sampler": false
+    "early_stopping": 10
   }
 }
