--- a/config/training/lora_last_linear_classification_head_config.json
+++ b/config/training/lora_last_linear_classification_head_config.json
@@ -5,14 +5,14 @@
     "output_dim": 1,
     "task": "classification",
     "dropout": 0,
-    "output_activation": "sigmoid"
+    "hidden_size": 960
   },
   "training_parameters": 
   {
     "learning_rate": 0.0001,
     "epochs": 6,
     "batch_size": 4,
-    "loss_f": "bce",
+    "loss_f": "masked_bce_logits",
     "optimizer": "adam",
     "val_split": 0.2,
     "weight_decay": 0.01,
@@ -23,6 +23,9 @@
     "gradient_accumulation": 1,
     "early_stopping": 5,
     "epoch_sizing": 1.0,
-    "model_output": "logits"
+    "model_output": "logits",
+    "no_classes":1,
+    "weights":"weights",
+    "sampler": false
   }
 }
