--- a/config/training/serum_allv6_41_mlp_classification_head_config_weighted.json
+++ b/config/training/serum_allv6_41_mlp_classification_head_config_weighted.json
@@ -9,20 +9,20 @@
     "hidden_dropout": 0.25
   },
   "training_parameters": {
-    "learning_rate": 5e-05,
-    "epochs": 200,
-    "batch_size": 512,
-    "loss_f": "masked_bce_logits",
-    "optimizer": "adam",
-    "val_split": 0.2,
-    "weight_decay": 0.01,
-    "warmup_steps": 0,
-    "gradient_clipping": false,
-    "scheduler": false,
-    "scaler": false,
-    "gradient_accumulation": false,
-    "epoch_sizing": 1000000,
-    "early_stopping": 10,
+      "learning_rate": 0.007807490197620891,
+      "epochs": 200,
+      "batch_size": 58,
+      "loss_f": "masked_bce_logits",
+      "optimizer": "adam",
+      "val_split": 0.2,
+      "weight_decay": 1e-06,
+      "warmup_steps": 0,
+      "gradient_clipping": false,
+      "scheduler": false,
+      "scaler": false,
+      "gradient_accumulation": false,
+      "epoch_sizing": false,
+      "early_stopping": 10,
     "weights": "weights_allv6_unbalanced_41",
     "sampler": false,
     "seed": 41
