--- a/config/training/serum_general_43_mlp_classification_head_config_weighted.json
+++ b/config/training/serum_general_43_mlp_classification_head_config_weighted.json
@@ -9,8 +9,7 @@
       "hidden_activation": "relu",
       "hidden_dropout": 0.25
     },
-    "training_parameters":
-    {
+    "training_parameters":{
       "learning_rate": 0.007807490197620891,
       "epochs": 200,
       "batch_size": 58,
